# warp

./: Cargo.toml  FORK_PLAN.md  PATCHES.md  skills-lock.json
.github/workflows/: fork-ci.yml
app/: Cargo.toml
app/src/: features.rs  lib.rs  root_view.rs  tracing.rs
app/src/ai/: agent_conversations_model.rs  agent_conversations_model_tests.rs  llms.rs  metadata_project_rules.rs  metadata_project_rules_tests.rs  onboarding.rs
app/src/code/: view.rs
app/src/code_review/: code_review_view.rs
app/src/context_chips/: directory_fetcher.rs  logging_tests.rs
app/src/local_control/: bridge.rs  mod.rs  mod_tests.rs  permissions.rs  resolver.rs
app/src/notebooks/: notebook.rs
app/src/pane_group/: mod.rs  mod_tests.rs
app/src/persistence/: sqlite.rs
app/src/remote_server/: codebase_index_model.rs  diff_state_proto.rs  diff_state_proto_tests.rs  server_model.rs  server_model_tests.rs
app/src/server/: server_api.rs
app/src/settings/: ai.rs
app/src/settings_view/: ai_page.rs  custom_inference_modal.rs  features_page.rs  mod.rs  scripting_page.rs  warpify_page.rs
app/src/terminal/: block_list_viewport.rs  input.rs  input_tests.rs  universal_developer_input.rs  view.rs  view_tests.rs
app/src/test_util/: terminal.rs
crates/app-4525-repro/: Cargo.toml
crates/app-4525-repro/src/: main.rs  main_tests.rs
specs/APP-4717/: TECH.md
specs/QUALITY-652/: TECH.md
specs/REMOTE-1543/: PRODUCT.md  TECH.md
specs/embedded-code-review-comments/: TECH.md
specs/gh-12476/: TECH.md
specs/warp-control-cli/: PRODUCT.md  SECURITY.md  TECH.md
(+238 files in other folders)
